--- a/report.tex
+++ b/report.tex
@@ -121,9 +121,13 @@
 使用python库music21实现乐谱与数据之间的转换。
 
 \subsection{产生初始种群}
-采用“从具有相同节拍的若干歌曲、乐曲中选取十个长度相等的片段”方法产生初始种群。选定节拍为44拍。为了保证旋律完整性，将长度设置为八小节。同时为保证调性一致，方便后续处理，将所有乐曲片段都进行了移调处理，得到C大调的初始种群。
+采用“从具有相同节拍的若干歌曲、乐曲中选取十个长度相等的片段”方法产生初始种群，主要做了如下考虑：
 
-在选择歌曲片段方面，主要考虑了节奏和旋律的丰富度，尽量减少样本内部的旋律重复。同时，选取了包含古典音乐、流行音乐在内的多种音乐风格，如《D大调卡农》、《青花瓷》等，使得初始种群的丰富度提高。
+1. 选定节拍为44拍。我们认为44拍是经典的平稳节奏型，大量受人喜爱的流行歌曲使用44拍，其旋律多具有悠长、叙事性强的特点。且小节内部“强-弱-次强-弱”的力度层次丰富，有较强的节奏感，容易被听众感知。
+
+2. 为了保证旋律完整性，将长度设置为八小节。同时为保证调性一致，方便后续处理，将所有乐曲片段都进行了移调处理，得到C大调的初始种群。
+
+3. 在具体挑选音乐片段时，主要考虑了节奏和旋律的丰富度，尽量减少样本内部的旋律重复。同时，选取了包含古典音乐、流行音乐在内的多种音乐风格，如《D大调卡农》、《青花瓷》等，使得初始种群的音乐丰富度提高。
 
 \subsection{遗传操作}
 包括交叉 (crossover), 变异 (mutation) 以及对旋律进行
