--- a/report.tex
+++ b/report.tex
@@ -168,9 +168,25 @@
 \quad generate\_population的功能是读取某个.mid文件中的旋律，并生成一组包含该旋律的二维数组，以作为遗传算法中的初始种群使用。
 
 \subsection{fitfuncion.py}
+
 该模块实现了适应度函数 FitFunction，用于评估音乐片段的适应度。该适应度函数主要关注音高、音符时值、音高变化等方面的特征。
+该模块主要考虑了两个部分：
 
+第一部分是与给定音乐片段的比较。给定音乐片段是公认较为悦耳的曲目。同时考虑到遗传算法的机械性与程序化，我们挑选了节奏型较为规律、音高旋律易于评估的乐曲片段，使得算法能够更好地提取片段的特征，在有限的范围内给出一段音乐“好在哪里”的评价标准。我们主要从三个方面衡量与给定音乐的差异：
 
+第一，比较两者整体音高的接近度。我们认为，好的音乐一般不会全部布局在过低音区或过高音区，而应该会主要分布于中音区到较高音区，因此将这个作为一个评估项。我们采取的方法是先计算两个片段的频率平均值，然后取绝对值差。
+
+第二，比较两者整体音高起伏度之间的差异。好的音乐旋律上往往会有规律性的变化，有一定的起伏度，这恰好是遗传算法可以提取到并加以衡量的一个特征。我们采取的方法是先计算两者整体音高的方差，然后取绝对值差。
+
+第三，比较两者细节上的接近度。这是一个“照葫芦画瓢”的机械操作，主要目的是希望遗传算法在开始的时候能较快地“步入正轨”，毕竟仅仅靠一些比较宽泛的标准很容易产生较大的偏差。我们采取的方法是比较二者每一个音的音高差，并求其绝对值和。
+
+第二部分是对生成的音乐片段自行评估。这一部分不考虑给定的音乐，直接在生成音乐的基础上进行评估，形成一部分分值。我们也划分为了三个方面。
+
+第一，衡量音乐片段的节奏复杂度。我们认为好的音乐具有较为丰富的节奏型。我们将音乐片段重新整合，计算出每个音符的长度存储进新的数组，然后对这个数组内的元素求方差，由此完成对节奏型的衡量。
+
+第二，衡量音乐片段中的突兀转音。为了让音乐片段里的音符不会转变突兀，使得片段听起来“呕哑嘲哳”，我们计算出每个音符之间的音程，并设定阈值为5，也就是相邻音之间音程超过5个半音会被我们判定为音高变化过于突兀。我们计算突兀部分占整首曲子的比例，作为减分项。（当然，这也是考虑到算法作曲过于程式化的特点，诚然规定了这一项可能会使乐曲不那么“灵动”，但是却提升了生成乐曲的水平的“下限”。）
+
+第三，衡量音乐片段中的不和谐音符。我们考察了一些好听的片段，发现有些音符并不适合作结尾长音，比如F、B。我们于是计算出F、B长音的数量，作为一个判断标准。由于这一标准有些主观，因此在最终分数中只占比较小的比例。
 
 \section{适应度函数选取与音乐特性}
 
